k8s/app/skillz-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: skillz
  labels:
    app: skillz
spec:
  ports:
    - port: 8080
      nodePort: 32000
  selector:
    app: skillz
    tier: back
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: skillz-back-deployment
  namespace: skillz
  labels:
    app: skillz
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: skillz
        tier: back
    spec:
      containers:
      - image: eu.gcr.io/wescale-site/xebiafrance/skillz-back:0.0.5
        name: skillz-back
        ports:
        - containerPort: 8080
          name: skillz-back
